versão final do trabalho

--- a/contato.html
+++ b/contato.html
@@ -19,31 +19,31 @@
             </ul>
         </nav>
     </header>
-    </body>
-    <div class="contact-container">
-        <h1>Contato</h1>
-        <ul>
-            <li>
-                <strong>Telefone:</strong>
-                (21) 98460-7803
-            </li>
-            <li>
-                <strong>Email:</strong>
-                <a href="mailto:contato@exemplo.com">timasguilherme@hotmail.com</a>
-            </li>
-            <li>
-                <strong>LinkedIn:</strong>
-                <a href="https://www.linkedin.com/in/seuperfil" target="_blank">linkedin.com/in/seuperfil</a>
-            </li>
-            <li>
-                <strong>Instagram:</strong>
-                <a href="https://www.instagram.com/seuperfil" target="_blank">@Guilherme_Timas</a>
-            </li>
-            <li>
-                <strong>GitHub:</strong>
-                <a href="https://github.com/seuperfil" target="_blank">github.com/seuperfil</a>
-            </li>
-        </ul>
-    </div>
 </body>
-</html>
+<div class="contact-container">
+    <h1>Contato</h1>
+    <ul>
+        <li>
+            <strong>Telefone:</strong>
+            (21) 98460-7803
+        </li>
+        <li>
+            <strong>Email:</strong>
+            <a href="mailto:contato@exemplo.com">timasguilherme@hotmail.com</a>
+        </li>
+        <li>
+            <strong>LinkedIn:</strong>
+            <a href="www.linkedin.com/in/guilherme-timas-839030362" target="_blank"> linkedin</a>
+            </a>
+        </li>
+        <li>
+            <strong>Instagram:</strong>
+            <a href="https://www.instagram.com/seuperfil" target="_blank">@Guilherme_Timas</a>
+        </li>
+        <li>
+            <strong>GitHub:</strong>
+            <a href="https://github.com/Guilhermetimas" target="_blank"> github</a>
+        </li>
+    </ul>
+</div>
+</body>
