--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         <h1>Bem-vindo ao Meu Site</h1>
         <p>Escolha uma das opções no menu para navegar.</p>
         <div class="presentation">
-            <img src="profile.jpg" alt="Foto de apresentação" class="profile-photo">
+            <style>
+                img {
+                  max-width: 20%; 
+                  height: auto; 
+                }
+              </style>
+              <img src="profile.jpg" alt="Descrição da imagem">
             <p class="intro-text">Meu nome é Guilherme Timas, estudante de TI e estou cursando Sistemas de Informação.</p>
         </div>
     </main>
