--- a/novidades.html
+++ b/novidades.html
@@ -20,3 +20,30 @@
             </ul>
         </nav>
     </header>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            font-size: 18px;
+            color: #555;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Site em Desenvolvimento</h1>
+        <p>Estamos trabalhando para trazer mais informações e conteúdos para você.</p>
+        <p>Em breve, teremos novidades! Fique atento e volte para conferir as atualizações.</p>
+    </div>
+</body>
+</html>
