--- a/projetos.html
+++ b/projetos.html
@@ -20,3 +20,47 @@
             </ul>
         </nav>
     </header>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            font-size: 18px;
+            color: #555;
+        }
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            text-align: left;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Meus Projetos</h1>
+        <p>Estou constantemente explorando novas ideias e me envolvendo em projetos que me inspiram. Aqui estão alguns dos meus trabalhos mais recentes:</p>
+        <ul>
+            <li>
+                <strong>Trabalho da Faculdade:</strong> Um projeto acadêmico que desenvolvi como parte do meu curso. Confira os detalhes <a href="https://guilhermetimas.github.io/site-pessoal/" target="_blank">aqui</a>.
+            </li>
+            <li>
+                <strong>Conta de Fotos de Jogos no Instagram:</strong> Uma página onde compartilho capturas incríveis de jogos. Siga meu perfil no Instagram <a href="https://www.instagram.com/guiso14?igsh=MWRzZW9qODRkNG45Yw==" target="_blank">guiso</a>.
+            </li>
+        </ul>
+        <p>Estou sempre buscando novas oportunidades para expandir minhas habilidades e colaborar em projetos inovadores. Fique à vontade para explorar meu trabalho!</p>
+    </div>
+</body>
+</html>
