--- a/sobre.html
+++ b/sobre.html
@@ -20,3 +20,32 @@
             </ul>
         </nav>
     </header>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            text-align: center;
+        }
+        img {
+            max-width: 300px;
+            border-radius: 10px;
+            margin: 20px 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            text-align: left;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Sobre Guilherme Silva</h1>
+        <img src="guilherme-timas.jpg" alt="Foto de Guilherme Silva">
+        <p>Guilherme Silva é um entusiasta da comunicação e do marketing. Ele completou o ensino médio e investiu em seu desenvolvimento pessoal e profissional. Com quatro anos de curso de inglês, Guilherme possui um nível intermediário no idioma. Além disso, ele também fez um curso de espanhol básico, ampliando ainda mais suas habilidades linguísticas.</p>
+        <p>Guilherme tem experiência prática na área de marketing, tendo trabalhado na promoção de uma hamburgueria local e na parte de marketing em uma loja de bolo de pote, onde colaborou com um amigo para promover o negócio.</p>
+        <p>Com um perfil versátil e habilidades em diversas áreas, Guilherme está sempre em busca de novos desafios e oportunidades para crescer profissionalmente.</p>
+    </div>
+</body>
+</html>
